# Open-LLM-VTuber

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.CN.md  README.md  conf.CN.yaml  conf.yaml  merge_configs.py  pixi.toml  pyproject.toml  run_server.py  unrealtest.py  upgrade.py
.github/ISSUE_TEMPLATE/: bug---question---get-help---bug---提问---求助.md  feature-request---功能建议.md
.github/workflows/: create_release.yml
config_templates/: README.md  conf.ZH.default.yaml  conf.default.yaml
prompts/utils/: concise_style_prompt.txt  group_conversation_prompt.txt
src/open_llm_vtuber/: chat_group.py  chat_history_manager.py  conversation.py  message_handler.py  routes.py  server.py  service_context.py  websocket_handler.py
src/open_llm_vtuber/agent/: agent_factory.py  input_types.py  stateless_llm_factory.py  transformers.py
src/open_llm_vtuber/asr/: asr_factory.py  azure_asr.py  meralion_asr.py  openai_whisper_asr.py  sherpa_onnx_asr.py  utils.py
src/open_llm_vtuber/config_manager/: __init__.py  agent.py  asr.py  character.py  stateless_llm.py  system.py  tts.py  tts_preprocessor.py  utils.py  vad.py
src/open_llm_vtuber/conversations/: conversation_handler.py  conversation_utils.py  group_conversation.py  single_conversation.py  tts_manager.py  types.py  utils.py
src/open_llm_vtuber/translate/: deeplx.py  tencent.py
src/open_llm_vtuber/tts/: tts_factory.py
src/open_llm_vtuber/utils/: sentence_divider.py  stream_audio.py  tts_preprocessor.py
src/open_llm_vtuber/vad/: silero.py  vad_factory.py  (+1 more)
web_tool/: README.md  index.html  main.js  recorder.js
(+5 files in other folders)
